--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
-<head> 
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -205,8 +205,9 @@ width: 10px;
 }
 
 .containerall{
-    width: 100%;
-    height: 600px;
+    width:100vw;
+    height:100vh;
+    line-height:100vh;
     background: rgb(17, 17, 17);
     position: relative;
 }
@@ -251,6 +252,7 @@ width: 10px;
      margin-top: 70px;
      margin-bottom: 15px;
  }
+
  .container1 figure:hover > img{
      transform: scale(1.3);
  }
@@ -416,7 +418,7 @@ width: 10px;
      will-change: transform;
  }
  .container4 figure .box4{
-     position: absolute;
+     position: absolute; 
      top: 0;
      width: 100%;
      height: 100%;
@@ -952,6 +954,9 @@ h2{
                         <img src="imagenes/inicio/IMAGENES CARRUSEL-03.png" alt="">
                     </div>
                     <div class="slide1">
+                        <img src="imagenes/ft 103 1.png" alt="">
+                    </div>
+                    <div class="slide1">
                         <img src="imagenes/inicio/IMAGENES CARRUSEL-04.png" alt="">
                     </div>
                     <div class="slide1">
@@ -963,12 +968,19 @@ h2{
                     <div class="slide1">
                         <img src="imagenes/inicio/IMAGENES CARRUSEL-07.png" alt="">
                     </div>
-        
+                    
+ 
+                    <div class="slide1">
+                        <img src="imagenes/ft 103 3.png" alt="">
+                    </div>
                     <div class="slide1">
                         <img src="imagenes/inicio/IMAGENES CARRUSEL-08.png" alt="">
                     </div>
                     <div class="slide1">
                         <img src="imagenes/inicio/IMAGENES CARRUSEL-09.png" alt="">
+                    </div>
+                    <div class="slide1">
+                        <img src="imagenes/ft 103 2.png" alt="">
                     </div>
                     <div class="slide1">
                         <img src="imagenes/inicio/IMAGENES CARRUSEL-10.png" alt="">
@@ -981,6 +993,9 @@ h2{
                     </div>
                     <div class="slide1">
                         <img src="imagenes/inicio/IMAGENES CARRUSEL-13.png" alt="">
+                    </div>
+                    <div class="slide1">
+                        <img src="imagenes/ft 103 4.png" alt="">
                     </div>
                     <div class="slide1">
                         <img src="imagenes/inicio/IMAGENES CARRUSEL-14.png" alt="">
@@ -1033,7 +1048,7 @@ h2{
     <div class="containerall" id="productos">
         <form action="mostrar_productos.php" method="post">
                 <div class="container1">
-                <figure>
+                <figure> 
                     <img src="imagenes/1x/DIST. INDUSTRIAL.jpg">
                     <div class="box1">
                         <button type = "submit" value = "Distribucion electrica industrial y monitoreo de redes e instrumentos" id = "categoria" name = "categoria">Ver productos</button>
