--- a/index_cliente.html
+++ b/index_cliente.html
@@ -228,7 +228,7 @@ h2#nosotros.title {
               <a class="nav-link" href="#contacto">Contacto</a>
             </li>
               <li class="nav-item">
-                <a class="nav-link" href="iniciar_sesion.php">Iniciar sesion</a>
+                <a class="nav-link" href="cerrar_sesion.php">Cerrar sesion</a>
               </li>
           </ul>
         </div>
@@ -603,7 +603,7 @@ h2#nosotros.title {
         <a href="mailto:ventas@enerpampa.com" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-envelope"></i>
         </a>
-        <a href="https://www.google.com.ar/maps/place/ENERPAMPA+S.+A./@-34.6585469,-58.5362871,16z/data=!4m12!1m6!3m5!1s0x95bcc90a8b940961:0xf3487b128b69db7f!2sENERPAMPA+S.+A.!8m2!3d-34.6583674!4d-58.5330233!3m4!1s0x95bcc90a8b940961:0xf3487b128b69db7f!8m2!3d-34.6583674!4d-58.5330233"target="_blank" rel="noopener noreferrer">
+        <a href="telefonos.html">
           <i class="bi bi-phone"></i>
         </a>
         <a href="https://www.google.com.ar/maps/place/ENERPAMPA+S.+A./@-34.6585469,-58.5362871,16z/data=!4m12!1m6!3m5!1s0x95bcc90a8b940961:0xf3487b128b69db7f!2sENERPAMPA+S.+A.!8m2!3d-34.6583674!4d-58.5330233!3m4!1s0x95bcc90a8b940961:0xf3487b128b69db7f!8m2!3d-34.6583674!4d-58.5330233"target="_blank" rel="noopener noreferrer">
