--- a/telefonos.html
+++ b/telefonos.html
@@ -5,14 +5,90 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Telefonos</title>
 </head>
+<style>
+    body{
+	background-color: rgb(59, 47, 47);
+	font-family: Arial;
+}
+
+#main-container{
+	margin: 150px auto;
+	width: 600px;
+}
+
+table{
+	background-color: white;
+	text-align: left;
+	border-collapse: collapse;
+	width: 100%;
+}
+
+th, td{
+	padding: 20px;
+}
+
+thead{
+	background-color: #246355;
+	border-bottom: solid 5px #0F362D;
+	color: white;
+}
+
+tr:nth-child(even){
+	background-color: #ddd;
+}
+
+tr:hover td{
+	background-color: #369681;
+	color: white;
+}
+h2{
+    color: #fff;
+    text-align: center;
+}
+p{
+    color: #fff;
+    text-align: center;
+}
+a{
+    text-decoration: none;
+    font-size: 20px;
+    color: #fff;
+}
+a:hover{
+    color: rgb(63, 62, 62);
+}
+</style>
 <body>
- <h2>Telefonos fijos:</h2>
+<a href="index.html">Volver al inicio</a>
+    <div id="main-container">
+        <h2>Telefonos:</h2>
  <p>(Llamanos a cualquiera de las lineas)</p>
-    <ul>
-    <li>2106-0462</li>
-    <li>7533-2216</li>
-    <li>7547-6554</li>
-    <li>7546-5690</li>
- </ul>
+    <table>
+        <thead>
+            <tr>
+                <th>Telefonos fijos</th><th>Lineas de celulares</th>
+            </tr>
+        </thead>
+        <td>
+
+        </td>
+        <td>
+            +54 911 2689-0580
+        </td>
+        <tr>
+            <td>+54 11 2106-0462</td><td>+54 911 3654-5903</td>
+        </tr>
+        <tr>
+            <td>+54 11 7533-2216</td><td>+54 911 3027-5187</td>
+        </tr>
+        <tr>
+            <td>+54 11 7547-6554</td><td>+54 911 3053-2734</td>
+        </tr>
+        <tr>
+            <td>+54 11 7546-5690</td><td>+54 911 5405-1912</td>
+        </tr>
+    </table>
+</div> 
+
 </body>
 </html>
