--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@ h2#nosotros.title {
                 <div class="slide1">
                     <img src="imagenes/inicio/IMAGENES CARRUSEL-37.png" alt="">
                 </div>
-            </div>
+            </div> 
         </section>
         </div>
     
@@ -617,6 +617,19 @@ h2#nosotros.title {
  <br>
  <br>
     <!-- Pie de pagina (footer) -->
+    <style>
+      @media screen and (max-width: 500px) {
+  .iconos-redes-sociales{
+    text-align: center;
+    margin-top: -500px;
+    width: 700px;
+  }
+  p .footer-texto.text-center{
+    width: 0;
+    height: 0;
+  } 
+} 
+    </style>
     <footer class="seccion-oscura d-flex flex-column align-items-center justify-content-center" id="contacto"> 
       <p class="footer-texto text-center">Enerpampa.sa
         <br>Nuestras redes sociales, contacto y ubicacion:</p>
